fix(navigation): make navigation not jump, make dropdown not jump

--- a/src/modules/shared/components/VisitorSpaceDropdown/VisitorSpaceDropdown.module.scss
+++ b/src/modules/shared/components/VisitorSpaceDropdown/VisitorSpaceDropdown.module.scss
@@ -10,6 +10,7 @@ $border-width: 0.2rem;
 
 .#{$component} {
 	position: relative;
+	min-height: 6.8rem;
 
 	&:hover {
 		cursor: pointer;
